2007-12-08  Jari Aalto  <Administrator@W2KPICASSO>

	* bin/cygbuild.sh:
	-- Comment out all `CygbuildPerlModuleLocation' calls and
	   use $CYGBUILD_STATIC_PERL_MODULE
	(CygbuildCommandMain): Add option -F|--force.
	(CygbuildCmdPkgDevelStandard): Move manual pages from
	devel-lib to devel-dev

2007-12-07  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh:
	-- Add `trap' to clean temporary files.
	(CygbuildCmdInstallCheckMain): Fix status code assignment.
	(CygbuildCygcheckLibraryDepGrepPgkNames): Check
	missing cache file better.
	(CygbuildCmdGetSource): Now handles multiple patches
	in Cygwin Net release source packages. Detect *.cygport
	(CygbuildCmdConfAutomake): Simplify.
	(CygbuildCmdConfMain): Run `CygbuildCmdConfAutomake' inside
	.build, not $srcdir.
	(CygbuildCmdPkgDevelStandard): Improve manual page search.
	Add color support. Add bin package support
	(CygbuildCmdPackageBinMain): New
	(CygbuildCmdPackageDevMain): New
	(WasLibraryInstall): New
	(CygbuildCommandMain): Change indentation level in for-command loop.
	(CygbuildReadmeReleaseMatchCheck): Do not display error
	if CYGWIN/<pkg>.README is not found.

2007-12-05  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh
	(CygbuildInstallPackageDocs): Fix --test more behavior. Do not
	run the tar command.
	(CygbuildInstallExtraBinFiles): New. Treat CYGWIN-PATCHES/bin
	(CygbuildCmdInstallCheckMakefiles): New. Try to detect use of
	static libraries.
	(CygbuildConfCC): Warn about static library linking during
	./configure
	(CygbuildReadmeReleaseMatchCheck): Use relative path in message
	(CygbuildCmdInstallCheckSetupHintMain): Broke long function
	into pieces. Now also uses `CygbuildMsgFilter' everywhere to
	display colored errors.
	(CygbuildCmdInstallCheckSetupHintCategory): New. Improve
	Perl and Python checks.
	(CygbuildCmdInstallCheckSetupHintDependExists): New (split).
	Chnage [OK] to plain OK.
	(CygbuildCmdInstallCheckSetupHintLdesc): New (split)
	(CygbuildCmdInstallCheckSetupHintSdesc): New (split)